fixup(super-admin): Copilot+Sonar second-pass review on PR #245 (4+3 findings)
Seven new findings on PR #245 after the (b) fixup landed: four from
Copilot, three from Sonar. (Some Sonar findings — S6809 self-invocation
×9, missing assertion in CrossTenantReadAuditTest, dead
nullSafePrincipal — were stale; already fixed in 0b3c0e7e but
analysis hadn't re-run. Ignored here.)

C1 — requireActiveHospitalId() ignored explicit X-Hospital-Id for
super-admin (regression introduced by F1):
- The (b) fixup over-corrected: my F1 short-circuit returned null for
  ANY super-admin, dropping both the JWT-derived primary (fix) AND
  the header-overridden scoped value (regression).
- Fix: added boolean headerOverridden field on HospitalContext
  (defaults false). HospitalContextRequestOverrides.applyRequestOverrides
  flips it to true on a successful header override.
  RoleValidator.requireActiveHospitalId() for super-admin now:
    if (headerOverridden && activeHospitalId != null) → activeHospitalId
    else → null
  Honours the click-card fix AND the explicit chip-scoping path.
- Tests: new RoleValidatorTest case for the header-override path,
  new HospitalContextRequestOverridesTest case asserting the flag
  flips, plus a no-header companion locking it stays false.

C2 — Nested interactive elements in hospital-scope-chip.component.html
(a11y / invalid HTML):
- Restructured chip template: main button + clear button are now
  siblings within .hospital-scope-chip flex container, not nested.
- Added [attr.title] alongside [attr.aria-label] to satisfy
  discernible-text a11y lint on the icon-only clear button.
- Existing chip Karma spec uses data-testid selectors → no edits.

C3 — disableUrlSync hard-coded but JSDoc said configurable:
- Promoted to @Input() so callers can opt out via
  [disableUrlSync]="true" from the template.

C4 — Spanish translations missing:
- Added complete HOSPITAL_SCOPE block to es.json (alphabetical
  between FEATURE_FLAGS and HOSPITALS) with 7 top-level keys